# flox

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
src/: config.h  config.h.in  constants.h  main.cpp  quad_tree.h  types.cpp  types.h
test/: CMakeLists.txt
test/src/: flox_test.cpp
